FE-adding custom scrollbar to all scroll over flow cases, other changes to fix styles error

--- a/pages/scss/custom.scss
+++ b/pages/scss/custom.scss
@@ -203,3 +203,18 @@ hr {
 a{
   color: var(--bs-primary) !important;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color:var(--bs-light);
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color:var(--bs-info);
+  border-radius: 100px;
+}
